RealmCharacterBuilder: add custom armor