@@ -1060,8 +1060,8 @@ public class RealmSpeakFrame extends JFrameWithStatus {
 				organizeWindow[1] = new JMenuItem("Maximized Layout");
 				organizeWindow[1].addActionListener(new ActionListener() {
 					public void actionPerformed(ActionEvent ev) {
-						mapForceLayout = new Integer((int)desktop.getSize().getWidth()-500);
-						characterFrameForceLayout = new Integer(500);
+						mapForceLayout = Integer.valueOf((int)desktop.getSize().getWidth()-500);
+						characterFrameForceLayout = Integer.valueOf(500);
 						organize();
 					}
 				});
@@ -1069,7 +1069,7 @@ public class RealmSpeakFrame extends JFrameWithStatus {
 				organizeWindow[2] = new JMenuItem("Full Map Layout");
 				organizeWindow[2].addActionListener(new ActionListener() {
 					public void actionPerformed(ActionEvent ev) {
-						mapForceLayout = new Integer((int)desktop.getSize().getWidth());
+						mapForceLayout = Integer.valueOf((int)desktop.getSize().getWidth());
 						characterFrameForceLayout = null;
 						organize();
 						if (gameHandler!=null && gameHandler.getInspector()!=null) {
